syntax = "proto3"; // 版本
option optimize_for = SPEED;
option java_package = "com.demo.netty.learn.protobuf";
option java_outer_classname = "MyDataInfo"; //生成的外部类名，同时也是文件名
// protobuf 使用 message 管理数据

// protobuf 可以使用 message 管理其它的message
message MyMessage{
  // 定义一个枚举类型
  enum DataType{
    StudentType = 0; //在ptoto3 要求enum的编号必须从0开始。"StudentType"为枚举的值
    WorkerType = 1;
  }

  // 用data_type 来标识传的是哪一个枚举类型
  DataType data_type = 1;
  // 表示每次枚举类型最多只能出现其中的一个，节省空间
  oneof dataBody{
    Student student = 2;
    Worker worker = 3;
  }

}

message Student{// 会在 StudentPOJO 外部类生成一个内部类 Student，他是真正发送的 POJO对象
  int32 id = 1; // Studnet类中有一个属性 名字为id 类型为 int32 1表示属性序号，不是值
  string name = 2;
}

message Worker{
  string name = 1;
  int32 age = 2;
}